--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,5 +1,69 @@
-*{
+:root{
+    --text-color1: #fff;
+    --text-color2: #333;
+    --background-color1: #000;
+    --background-color2: #333;
+}
+
+body{
     padding: 0;
     margin: 0;
     border: 0;
+    min-height: 100vh;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+header{
+    background-color: var(--background-color2);
+    color: var(--text-color1);
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/*header p{
+    padding: 50px;
+}*/
+
+header #navigation-bar{
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--background-color1);
+    color: var(--text-color1);
+    padding: 10px;
+}
+
+.nav-link{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: var(--text-color1);
+    text-decoration: none;
+}
+
+main{
+    background-color: grey;
+    grid-column: 1 / 3;
+    min-height: 50vh;
+}
+
+aside{
+    background-color: lightblue;
+}
+
+footer{
+    background-color: var(--background-color1);
+    color: var(--text-color1);
+    grid-column: 1 / 4;
+}
+footer p{
+    display: flex;
+    justify-content: center;
+}
+
+p{
+    padding-left: 30px;
+    margin-top: 10px;
 }
