--- a/styles/base.css
+++ b/styles/base.css
@@ -5,11 +5,17 @@
     --background-color2: #333;
 }
 
+html{
+    background-color: #322;
+}
+
 body{
     padding: 0;
     margin: 0;
     border: 0;
     min-height: 100vh;
+    max-width: 60vw;
+    justify-self: center;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -22,6 +28,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 10px;
 }
 h1, h2 {
     text-align: center;
@@ -46,23 +53,61 @@ main{
     background-color: grey;
     grid-column: 1 / 3;
     min-height: 50vh;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    margin-right: 20px;
 }
 
 aside{
     background-color: lightblue;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 footer{
-    background-color: var(--background-color1);
+    background-color: var(--background-color2);
     color: var(--text-color1);
     grid-column: 1 / 4;
+    border-radius: 10px;
+    align-content: center;
 }
 footer p{
     display: flex;
     justify-content: center;
+    color: aliceblue;
+}
+
+img {
+    width: 200px;
+    margin: 10px;
+    border-radius: 5%;
+    border-top: 2px solid gold;
+    border-bottom: 2px solid gold;
+    padding: 5px 0 5px 0;
+}
+
+div{
+    display: flex;
+    flex-direction: row;
 }
 
 p{
+    color: #022;
+    /*background-color: lemonchiffon;*/
     padding-left: 30px;
     margin-top: 10px;
+    margin: 0 10px 0 10px;;
+}
+.about-me, .resources{
+    width: 100%;
+    color: var(--text-color1);
+    background-color: var(--background-color2);
+    justify-self: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    padding: 15px 0 15px 0;
+}
+
+nav{
+    border-radius: 10px;
 }
