--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,8 @@
     --text-color2: #333;
     --background-color1: #000;
     --background-color2: #333;
+    --body-font: "Lato", Sans-serif;
+    --h1-h2-h3-font: "Sofia", Sans-serif;
 }
 
 html{
@@ -19,6 +21,7 @@ body{
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    font-weight: 300;
 }
 header{
     background-color: var(--background-color2);
@@ -29,17 +32,30 @@ header{
     flex-direction: column;
     justify-content: space-between;
     border-radius: 10px;
+    font-family: var(--body-font);
 }
 h1, h2 {
     text-align: center;
+    font-family: var(--h1-h2-h3-font);
+}
+span {
+    text-align: center;
+    font-size: 40px;
 }
 
-header #navigation-bar{
+nav{
     display: flex;
     justify-content: space-around;
     background-color: var(--background-color1);
     color: var(--text-color1);
     padding: 10px;
+}
+nav a:hover{
+    border: 1px solid white;
+    border-radius: 15%;
+    padding: 0 10px 0 10px;
+    background-color: var(--background-color2);
+    font-family: var(--body-font);
 }
 
 .nav-link{
@@ -47,6 +63,7 @@ header #navigation-bar{
     padding-bottom: 5px;
     color: var(--text-color1);
     text-decoration: none;
+    font-family: var(--h1-h2-h3-font);
 }
 
 main{
@@ -93,7 +110,8 @@ div{
 
 p{
     color: #022;
-    /*background-color: lemonchiffon;*/
+    font-weight: 400;
+    font-family: var(--body-font);
     padding-left: 30px;
     margin-top: 10px;
     margin: 0 10px 0 10px;;
@@ -107,7 +125,16 @@ p{
     border-top-right-radius: 15px;
     padding: 15px 0 15px 0;
 }
+.equal-spacing{
+    margin-top: 1.2em;
+}
 
 nav{
     border-radius: 10px;
+}
+h3{
+    text-align: center;
+    font-size: x-large;
+    font-family: var(--h1-h2-h3-font);
+    
 }
