--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
     --text-color2: #333;
     --background-color1: #000;
     --background-color2: #333;
+    --background-color3: white;
     --body-font: "Lato", Sans-serif;
     --h1-h2-h3-font: "Sofia", Sans-serif;
 }
@@ -70,7 +71,7 @@ nav a:hover{
 }
 
 main{
-    background-color: grey;
+    background-color: var(--background-color3);
     grid-column: 1 / 3;
     min-height: 50vh;
     border-bottom-left-radius: 10px;
