--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,63 +1,69 @@
 html {
     background-color: #fff;
 }
-body{
-    padding: 0;
-    margin: 0;
-    border: 0;
-    min-height: 100vh;
-    max-width: auto;
-    justify-self: center;
-    box-sizing: border-box;
-}
-header{
-    background-color: darkblue;
-    display: flex;
-    justify-content: space-between;
-    border: 2px solid grey;
-    padding: 15px;
-}
-header span {
-    width: 30%;
-    color: white;
-    padding: 2px 20px 2px 20px;
-    text-align: center;
-    font-size: larger;
-    font-family: "Lato", sans-serif;
-    margin-left: 25px;
-}
-nav {
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-}
-header nav a {
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    font-size: large;
-    font-family: "Lato", sans-serif;
-}
+@media screen and (min-width: 1180px) {
+        body{
+        padding: 0;
+        margin: 0;
+        border: 0;
+        min-height: 100vh;
+        width: auto;
+        justify-self: center;
+        box-sizing: border-box;
+    }
+    header{
+        background-color: darkblue;
+        display: flex;
+        justify-content: space-between;
+        border: 2px solid grey;
+        padding: 15px;
+        width: auto;
+    }
+    header span {
+        width: 30%;
+        color: white;
+        padding: 2px 20px 2px 20px;
+        font-size: larger;
+        font-weight: 800;
+        font-family: "Lato", sans-serif;
+        margin-left: 25px;
+    }
+    nav {
+        width: 50%;
+        display: flex;
+        justify-content: space-around;
+    }
+    header nav a {
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        font-size: large;
+        font-family: "Lato", sans-serif;
+    }
 
-main {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-h1, footer{
-    grid-column: 1/4;
-    text-align: center;
-    font-family: "Lato", "Sofia", sans-serif;
-}
-figure {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    box-sizing: border-box;
-    text-align: center;
-    background-color: bisque;
-}
-footer {
-    display: block;
-    background-color: darkblue;
-    color: #fff;
+    main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    h1, footer{
+        grid-column: 1/4;
+        text-align: center;
+        font-family: "Lato", "Sofia", sans-serif;
+    }
+    figure {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-sizing: border-box;
+        text-align: center;
+        background-color: bisque;
+    }
+    img{
+        width: 25vw;
+    }
+    footer {
+        display: block;
+        background-color: darkblue;
+        color: #fff;
+    }
 }
