--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,6 +1,78 @@
-@media  screen and (max-width: 600px) {
-    body{
+@media  screen and (max-width: 1180px) {
+       body{
+        padding: 0;
+        margin: 0;
+        border: 0;
+        min-height: 100vh;
+        width: auto;
+        justify-self: center;
+        box-sizing: border-box;
+    }
+    header{
+        background-color: darkblue;
+        display: flex;
+        justify-content: space-between;
+        border: 2px solid grey;
+        padding: 15px;
+        width: auto;
+    }
+    header span {
+        width: 30%;
+        color: white;
+        padding: 2px 20px 2px 20px;
+        font-size: larger;
+        font-weight: 800;
+        font-family: "Lato", sans-serif;
+        margin-left: 25px;
+    }
+    nav {
+        width: 50%;
+        display: flex;
+        justify-content: space-around;
+    }
+    header nav a {
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        font-size: large;
+        font-family: "Lato", sans-serif;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    h1, footer{
+        grid-column: 1/3;
+        text-align: center;
+        font-family: "Lato", "Sofia", sans-serif;
+    }
+    figure {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-sizing: border-box;
+        text-align: center;
+        background-color: bisque;
+    }
+    img{
+        width: 35vw;
+    }
+    footer {
         display: block;
-        width: 100%;
+        background-color: darkblue;
+        color: #fff;
+    }
+    @media screen and (max-width: 820px) {
+        main{
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+        h1, footer {
+            grid-column: 1/2;
+        }
+        img {
+            width: 75vw;
+        }
     }
 }
