--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -16,7 +16,7 @@ html {
         display: flex;
         justify-content: space-between;
         border: 2px solid grey;
-        padding: 15px;
+        padding: 35px;
         width: auto;
     }
     header span {
@@ -65,5 +65,6 @@ html {
         display: block;
         background-color: darkblue;
         color: #fff;
+        padding: 1px 0 1px 0;
     }
 }
