--- a/styles/temples.css
+++ b/styles/temples.css
@@ -62,6 +62,7 @@
         display: block;
         background-color: darkblue;
         color: #fff;
+        padding: 1px 0 1px 0;
     }
     @media screen and (max-width: 820px) {
         main{
