--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -40,6 +40,12 @@ html {
         font-size: large;
         font-family: "Lato", sans-serif;
     }
+    nav a:hover {
+        border: 1px solid greenyellow;
+        border-radius: 20%;
+        padding: 0 10px 0 10px;
+        font-family: "Sofia", sans-serif;
+    }
 
     main {
         display: grid;
