--- a/styles/temples.css
+++ b/styles/temples.css
@@ -9,12 +9,12 @@
         box-sizing: border-box;
     }
     header{
-        background-color: darkblue;
         display: flex;
         justify-content: space-between;
+        background-color: darkblue;
         border: 2px solid grey;
         padding: 15px;
-        width: auto;
+        width: 100%;
     }
     header span {
         width: 30%;
@@ -29,6 +29,10 @@
         width: 50%;
         display: flex;
         justify-content: space-around;
+        transition: all 0.4s ease-in-out;
+    }
+    ul{
+        list-style: none;
     }
     header nav a {
         color: white;
@@ -37,11 +41,39 @@
         font-size: large;
         font-family: "Lato", sans-serif;
     }
+
+    .hamburger {
+        display: none;
+        cursor: pointer;
+    }
+    .hamburger_bar {
+        height: 1px;
+        width: 15px;
+        background: #fff;
+        margin: 2px 0;
+        opacity: 0.7;
+        transition: all 0.5s ease-in-out;
+    }
     nav a:hover {
         border: 1px solid greenyellow;
         border-radius: 20%;
-        padding: 0 10px 0 10px;
+        padding: 0 10px 0 5px;
         font-family: "Sofia", sans-serif;
+    }
+    .nav--display {
+        transform: translate(0) !important;
+    }
+
+    .hamburger-quit .hamburger_bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger-quit .hamburger_bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger-quit .hamburger_bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
     }
 
     main {
@@ -84,5 +116,32 @@
         img {
             width: 75vw;
         }
+        nav{
+            display: flex;
+            flex-direction: column;
+            row-gap: 10px;
+            border-radius: 0 0 25% 25%;
+            position: fixed;
+            top: 60px;
+            background-color: darkgreen;
+            width: auto;
+            padding: 0 15px 7px 15px;
+            right: 2%;
+            transform: translateX(150%);
+        }
+        .hamburger{
+            display: flex;
+            flex-direction: column;
+            background-color: black;
+            
+        }
+        .hamburger div {
+            width: 15px;
+            padding: 1px 10px 1px 10px;
+            background-color: #fff;
+
+        }
+    
     }
+
 }
