Added design.html file and styles folder in the  created week03 folder.

--- a/styles/base.css
+++ b/styles/base.css
@@ -85,8 +85,12 @@ aside{
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
 }
-
-li a {
+ul {
+    list-style: none;
+}
+ul li a {
+    color: var(--background-color2);
+    font-weight: 600;
     text-decoration: none;
 }
 
