Removed list dot and applied hover effect to the list <a> tag elements.

--- a/styles/base.css
+++ b/styles/base.css
@@ -94,6 +94,11 @@ ul li a {
     text-decoration: none;
 }
 
+ul li a:hover {
+    color: darkolivegreen;
+    text-decoration: underline;
+}
+
 footer{
     background-color: var(--background-color2);
     color: var(--text-color1);
