--- a/week03/styles/design.css
+++ b/week03/styles/design.css
@@ -9,22 +9,27 @@ footer {
 	margin: 0 auto;
 }
 
-marquee {
+.banner {
 	padding: 1rem;
 	background-color: #eee;
+	text-align: center;
+	font-weight: 700;
 }
 
 h1 {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	border-bottom: 1px solid rgba(0 0 0/ 0.3);
+	
 }
 
 main {
 	display: grid;
+	grid-template-columns: repeat(3, 1fr);
 }
 
 h2 {
 	color: navy;
-	text-align: center;
+	text-align: left;
+	grid-column: 1/4;
 }
 
 article p {
@@ -32,13 +37,28 @@ article p {
 }
 
 .callout {
-	color: #777;
-	background-color: #702963;
+	color: #171a1f;
+	background-color: #e3e5e9;
+    padding: 8px;
+	grid-column: 1/4;
+}
+.list-section{
+	padding-left: 30px;
+}
+.items{
+	padding-left: 2.5rem;
 }
 
 footer {
 	margin-top: 1rem;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-top: 1px solid rgba(0 0 0/ 0.3);
 	font-size: smaller;
-	text-align: right;
+	padding: 15px 0;
+	
+}
+.first-section{
+	grid-column: 1/3;
+}
+section h3 :nth-of-type(2) {
+	padding-left: 10px;
 }
