--- a/styles/place.css
+++ b/styles/place.css
@@ -1,4 +1,38 @@
+:root{
+    --text-color1: #fff;
+    --text-color2: #333;
+    --background-color1: #000;
+    --background-color2: #333;
+    --background-color3: white;
+    --background-color4: #eaeff9;
+    --body-font: "Lato", Sans-serif;
+    --h1-h2-h3-font: "Sofia", Sans-serif;
+}
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    width: 80%;
+    align-self: center;
+    background-color: var(--background-color1);
+    padding: 0;
+    margin: 0;
+    border: 0;
+    min-height: 100vh;
+    max-width: 60vw;
+    justify-self: center;
+    box-sizing: border-box;
+    color: var(--text-color1);
+}
+.flex-head{
+    display: flex;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
