--- a/styles/place.css
+++ b/styles/place.css
@@ -61,10 +61,11 @@ main{
 }
 .country {
     width: 100%;
-    background-color: var(--background-color4);
+    background-color: var(--background-color5);
     color: var(--background-color2);
     align-self: center;
     text-align: center;
+    font-family: "Lato", sans-serif;
 }
 .hero {
     display: flex;
@@ -76,7 +77,7 @@ main{
 .data-section {
     display: grid;
     position: absolute;
-    width: 20%;
+    width: 25%;
     margin-top: 1.5rem;
     margin-left: 1rem;
     padding-bottom: 1rem;
@@ -84,24 +85,34 @@ main{
     background-color: var(--background-color2);
     color: var(--text-color1);
     border-radius: 5px;
+    font-family: "Lato", sans-serif;
 }
 
 .weather-section {
     display: grid;
     position: absolute;
-    width: 15%;
-    margin-top: 25rem;
-    margin-left: 60rem;
+    width: 20%;
+    margin-top: 10rem;
+    margin-left: 56rem;
     padding-bottom: 1rem;
     padding-top: 1rem;
     background-color: var(--background-color2);
     color: var(--text-color1);
     border-radius: 5px;
+    font-family: "Lato", sans-serif;
 }
-
-.data-section p, .weather-section p {
+.h-span {
+    color: var(--primary-color1);
+}
+.weather-section p, .data-section p {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 10px;
+}
+.data-items, .weather-items {
     text-align: right;
 }
+
 .data-section h2, .weather-section h2 {
     background-color: var(--background-color);
     color: var(--background-color2);
@@ -110,10 +121,7 @@ main{
     margin: 10px 10px 10px -10px;
     border-radius: 0 3px 3px 0;
 }
-.weather-section img {
-    width: 25px;
-    height: 25px;
-}
+
 .hero img {
     width: 100%;
     border-radius: 8px;
@@ -127,4 +135,8 @@ footer {
     color: var(--background-color2);
     text-align: center;
     background-color: var(--background-color5);
+}
+footer p {
+    font-size: larger;
+    font-family: "Lato", sans-serif;
 }
