--- a/styles/place.css
+++ b/styles/place.css
@@ -126,6 +126,10 @@
         margin: 10px 10px 10px -10px;
         border-radius: 0 3px 3px 0;
     }
+    .wind-text::after{
+        font-family: "Sofia", sans-serif;
+        font-weight: 700;
+    }
 
     .hero img {
         width: 100%;
