Created ,developed and applied a css :root function to all border.

--- a/styles/place.css
+++ b/styles/place.css
@@ -39,6 +39,7 @@
         border-radius: 7px;
         background-color: var(--background-color5);
         padding: 3px;
+        margin-bottom: 5px;
         align-items: center;
     }
     .flag-span {
