--- a/styles/place-medium.css
+++ b/styles/place-medium.css
@@ -12,6 +12,7 @@
     --body-background-color: #afafaf;
     --body-font: "Lato", Sans-serif;
     --h1-h2-h3-font: "Sofia", Sans-serif;
+    --border: 2px solid grey;
 }
 * {
     padding: 0;
@@ -34,9 +35,18 @@
         display: flex;
         justify-content: space-between;
         background-color: var(--background-color5);
-        border: 2px solid grey;
+        border: var(--border);
+        border-radius: 8px;
         padding: 15px;
         width: 100%;
+    }
+
+    .flag-span img {
+        border-radius: 5px;
+    }
+    .block {
+        margin-bottom: 5px;
+        border-radius: 8px;
     }
     .hero {
         display: grid;
@@ -44,17 +54,20 @@
     }
     .hero picture {
         grid-column: 1/4;
+        border: var(--border);
+        border-radius: 5px;
     }
     .hero img {
         width: 100%;
         height: auto;
+        border-radius: 5px;
     }
     
     .data-section, .weather-section {
         grid-column: 1/4;
         background-color: var(--background-color2);
-        border: 2px solid var(--primary-color1);
-
+        border: var(--border);
+        border-radius: 5px;
         margin: 1px;
     }
     
@@ -86,7 +99,7 @@
     footer {
         background-color: var(--background-color4);
         border-radius: 8px;
-        border: 2px solid var(--primary-color1);
+        border: var(--border);
         color: var(--background-color2);
         text-align: center;
         background-color: var(--background-color5);
