--- a/week04/styles/tables.css
+++ b/week04/styles/tables.css
@@ -6,5 +6,18 @@
 }
 
 body {
-    padding: 50px;
+    padding: 10px;
+}
+table {
+    border: 2px solid var(--head-background-color);
+    padding: 0.5em 0.2rem;
+    width: 400px;
+}
+caption {
+    caption-side: bottom;
+    font-size: smaller;
+    padding: 0.3rem;
+}
+th, td {
+    border: 2px solid var(--head-background-color);
 }
