--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -1,3 +1,5 @@
+
+
 @media  screen and (max-width: 1180px) {
        body{
         padding: 0;
@@ -80,37 +82,32 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    h1, h2, footer{
+    h1 {
         grid-column: 1/3;
+    }
+    footer{
+        grid-column: 1/3;
+        display: block;
+        background-color: darkblue;
+        color: #fff;
+        padding: 1px 0 1px 0;
         text-align: center;
         font-family: "Lato", "Sofia", sans-serif;
     }
-    figure {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        box-sizing: border-box;
-        text-align: center;
-        background-color: bisque;
-    }
+    
     img{
         width: 35vw;
     }
     img:hover {
         border: 2px solid brown;
     }
-    footer {
-        display: block;
-        background-color: darkblue;
-        color: #fff;
-        padding: 1px 0 1px 0;
-    }
+    
     @media screen and (max-width: 820px) {
         main{
             display: grid;
             grid-template-columns: 1fr;
         }
-        h1, h2, footer {
+        footer {
             grid-column: 1/2;
         }
         img {
