--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -15,16 +15,82 @@
 }
 body {
     width: 100vw;
+    background-color: var(--accent-color2);
 }
 header{
-    width: 80%;
-    
+    width: 70%;
+    background-color: var(--primary-color1);
+    padding: 8px 12px;
+    justify-self: center;
+    margin-bottom: 20px;
 }
-header span {
+header .hs {
     display: block;
     text-align: center;
     font-family: "Lato", sans-serif;
     font-size: 40px;
     font-weight: 700;
-    
+    background-color: var(--accent-color1);
+    color: var(--secondary-color2);
+}
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+    width: 70%;
+    justify-self: center;
+}
+.main-grid h1 {
+    grid-column: 1/3;
+    color: var(--secondary-color2);
+    text-align: center;
+}
+main .logo-text {
+    grid-column: 1/3;
+    justify-items: center;
+    display: grid;
+}
+main .logo-text .logo {
+    justify-self: center;
+}
+.logo-text .domain {
+    font-family: "Alegreya", sans-serif;
+    font-size: large;
+    font-weight: 700;
+}
+.domain-name {
+    color: var(--primary-color2);
+    text-decoration: underline;
+}
+h2 {
+    color: var(--secondary-color2);
+}
+.color-typography ul, .color-typography ol {
+    list-style: none;
+}
+.wireframe {
+    grid-column: 1/3;
+    display: grid;
+}
+.wireframe h2 {
+    grid-column: 1/3;
+    background-color: var(--accent-color1);
+}
+.wireframe img {
+    width: 100%;
+}
+footer {
+    width: 70%;
+    background-color: var(--primary-color1);
+    justify-self: center;
+    padding: 10px 10px;
+    justify-items: center;
+}
+footer p {
+    background-color: var(--accent-color1);
+    padding: 10px 25px;
+    font-family: "Lato",sans-serif;
+    font-size: 20px;
+    color: var(--secondary-color2);
 }
