--- a/week05/styles/form.css
+++ b/week05/styles/form.css
@@ -1,8 +1,143 @@
+:root {
+    --header-footer-background-color: #333;
+    --background-color: #ababab;
+    --text-color: #fff;
+    --border-radius: 8px;
+    --background-G: linear-gradient(15deg, brown, blue, purple, green, deeppink);
+}
+
 html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
 
 body {
     font-size: 16px;
-    font-family: ;
+    font-family: "Lato", sans-serif;
+    width: 100%;
+    max-width: 540px;
+    justify-self: center;
+}
+
+header, footer {
+    background-color: var(--header-footer-background-color);
+    color: var(--text-color);
+    text-align: center;
+    border: 2px solid gold;
+    border-radius: var(--border-radius);
+    padding: .1rem;
+    margin: .5rem 0 .5rem 0;
+}
+header h1 {
+    font-size: 2rem;
+    padding: 20px;
+}
+
+.web-form {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-color);
+    border: 2px solid gold;
+    border-radius: var(--border-radius);
+}
+
+.web-form div {
+    display: grid;
+    margin-top: 2rem;
+    padding: 0 15px 0 15px;
+    
+}
+
+.web-form .rate-section {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+
+.web-form .product-name, .web-form {
+    display: grid;
+}
+
+.relative {
+    position: relative;
+}
+
+.relative p {
+    position: absolute;
+    margin: -1rem 0 0 1rem;
+}
+
+
+.rate-icon {
+    display: grid;
+    justify-content: center;
+}
+
+
+.product-name-span,
+.rating-p,
+.review span,
+.date-span,
+.name,
+.relative .features {
+    font-weight: 700;
+}
+
+.web-form .submit-div {
+    margin-bottom: 2.5rem;
+}
+
+.installation-date,
+.review,
+.username {
+    display: grid;
+}
+
+.installation-date input[id="date"],
+.product-name select[id="product-name"],
+.username input[id="username"],
+.web-form input[type="submit"] {
+    padding: 1rem .5rem 1rem .5rem;
+}
+.submit-div .asterisk, .asterisk {
+    color: red;
+}
+
+
+#features label span {
+    margin-left: 10px;
+    font-size: large;
+}
+
+#features input {
+    width: 15px;
+    height: 15px;
+}
+
+.rate-section label span {
+    font-size: larger;
+}
+
+.rate-section input {
+    height: 20px;
+}
+
+.review textarea {
+    padding: 2rem .2rem 2rem .2rem;    
+}
+
+.optional {
+    color: #55f;
+}
+
+input[type="submit"] {
+    background: var(--background-G);
+    border: 2px solid gold;
+    font-family: "Sofia", sans-serif;
+    font-size: larger;
+    font-weight: 700;
+    color: #fff;
+    text-transform: capitalize;
+}
+input[type="submit"]:hover {
+    font-family: "Lato", sans-serif;
 }
