Debugged aluminum-calculator.js file to enable it print to web page and tweek the coresponding html and css files accordingly.

--- a/week06/styles/unicon-alu-co.css
+++ b/week06/styles/unicon-alu-co.css
@@ -180,7 +180,7 @@ footer {
     padding: 0 8px;
     font-family: "Roboto", sans-serif;
 }
-label[for="button"] {
+label[for="calculate-all"] {
     border: 3px solid var(--primary-color2);
     height: 70px;
     width: 100%;
