--- a/styles/form.css
+++ b/styles/form.css
@@ -1,4 +1,12 @@
 :root {
+    --primary-color1: #003F88;
+    --primary-color2: #640D14;
+    --secondary-color1: #004f2d;
+    --secondary-color2: #3C096C;
+    --accent-color1: #FDF0D5;
+    --accent-color2: #EDF2F4;
+    --border-color: grey;
+    --background-color3: #cdcdcd;
     --header-footer-background-color: #333;
     --background-color: #ababab;
     --text-color: #fff;
@@ -10,7 +18,67 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
 
-body {
+header {
+    display: grid;
+    border: 2px solid var(--border-color);
+    margin-bottom: 7px;
+}
+
+.company-div {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    background-color: var(--primary-color1);
+}
+
+.company-logo {
+    border: 5px solid var(--secondary-color1);
+    border-radius: 20px;
+    margin-left: 30px;
+}
+
+@media screen and (min-width: 1150px){
+    .nav-bar {
+        display: flex;
+        justify-content: space-evenly;
+        background-color: var(--secondary-color1);
+        padding: 10px;
+    }
+
+    .nav-bar a {
+        background-color: var(--primary-color1);
+        color: var(--accent-color2);
+        padding: 7px;
+        border: 2px solid var(--border-color);
+        border-radius: 7px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 20px;
+        margin: 0 80px;
+        width: 100%;
+        max-width: 10rem;
+    }
+}
+
+.company-name {
+    grid-column: 2/4;
+    text-align: center;
+    font-family: "Lato", sans-serif;
+    font-size: 3.5rem;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    color: var(--accent-color2);
+}
+
+
+footer p {
+    background-color: var(--primary-color1);
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+    color: var(--accent-color2);
+}
+
+#form-main {
     font-size: 16px;
     font-family: "Lato", sans-serif;
     width: 100%;
@@ -18,15 +86,7 @@ body {
     justify-self: center;
 }
 
-header, footer {
-    background-color: var(--header-footer-background-color);
-    color: var(--text-color);
-    text-align: center;
-    border: 2px solid gold;
-    border-radius: var(--border-radius);
-    padding: .1rem;
-    margin: .5rem 0 .5rem 0;
-}
+
 header h1 {
     font-size: 2rem;
     padding: 20px;
