--- a/styles/unicon-alu-co.css
+++ b/styles/unicon-alu-co.css
@@ -224,7 +224,6 @@ label[for="calculate-all"] {
     height: 60px;
     width: 100%;
     max-width: 600px;
-    /*margin: 0 0 15px 15px;*/
     border: 4px solid var(--border-color);
     border-radius: 40%;
     color: var(--background-color3);
@@ -238,4 +237,5 @@ label[for="calculate-all"] {
 }
 #lastModified {
  padding-bottom: 35px;
+ visibility: visible;
 }
