--- a/styles/unicon-alu-co.css
+++ b/styles/unicon-alu-co.css
@@ -70,35 +70,6 @@ body {
 }
 
 
-@media screen and (max-width: 1152px) {
-    .nav-bar {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: var(--secondary-color1);
-        padding: 10px;
-        row-gap: .6rem;
-    }
-
-    .nav-bar a {
-        background-color: var(--primary-color1);
-        color: var(--accent-color2);
-        padding: 7px;
-        border: 2px solid var(--border-color);
-        border-radius: 7px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 20px;
-        margin: 0 80px;
-        width: 100%;
-        max-width: 600px;
-        align-self: center;
-    
-    }
-
-
-}
-
 .company-name {
     grid-column: 2/4;
     text-align: center;
@@ -154,6 +125,58 @@ body {
 }
 footer {
     margin-top: 18.3rem;
+}
+
+
+@media screen and (max-width: 1152px) {
+    .nav-bar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: var(--secondary-color1);
+        padding: 10px;
+        row-gap: .6rem;
+    }
+
+    .nav-bar a {
+        background-color: var(--primary-color1);
+        color: var(--accent-color2);
+        padding: 7px;
+        border: 2px solid var(--border-color);
+        border-radius: 7px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 20px;
+        margin: 0 80px;
+        width: 100%;
+        max-width: 600px;
+        align-self: center;
+    
+    }
+
+    .roof-box {
+        position: static;
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .Nov-10-2021, .Feb-19-2009 {
+        position: static;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        width: auto;
+        align-items: center;
+    }
+
+    .Nov-10-2021 img .Feb-19-2009 img  {
+        width: 100%;
+        max-width: 420px;
+    }
+    .home-body footer {
+        margin-top: 1rem;
+    }
 }
 
 
