--- a/styles/unicon-form.css
+++ b/styles/unicon-form.css
@@ -24,7 +24,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
     margin: 0;
 }
 
-.form-body, .body {
+.form-body {
     background-color: var(--accent-color1);
 }
 
