--- a/styles/form.css
+++ b/styles/form.css
@@ -24,8 +24,11 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
     margin: 0;
 }
 
-.form-body, .body {
+body {
     background-color: var(--accent-color1);
+    width: 100%;
+    max-width: 540px;
+    justify-self: center;
 }
 
 
@@ -34,84 +37,8 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
     background-color: var(--primary-color1);
     color: var(--accent-color2);
     border-radius: 7px;
-}
-
-header {
-    display: grid;
     border: 2px solid var(--border-color);
     margin-bottom: 7px;
-}
-
-.company-div {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    background-color: var(--primary-color1);
-}
-
-.company-logo {
-    border: 5px solid var(--secondary-color1);
-    border-radius: 20px;
-    margin-left: 30px;
-}
-
-@media screen and (min-width: 1150px){
-    .nav-bar {
-        display: flex;
-        justify-content: space-evenly;
-        background-color: var(--secondary-color1);
-        padding: 10px;
-    }
-
-    .nav-bar a {
-        background-color: var(--primary-color1);
-        color: var(--accent-color2);
-        padding: 7px;
-        border: 2px solid var(--border-color);
-        border-radius: 7px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 20px;
-        margin: 0 80px;
-        width: 100%;
-        max-width: 10rem;
-    }
-}
-
-@media screen and (max-width: 1152px) {
-    .nav-bar {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: var(--secondary-color1);
-        padding: 10px;
-        row-gap: .6rem;
-    }
-
-    .nav-bar a {
-        background-color: var(--primary-color1);
-        color: var(--accent-color2);
-        padding: 7px;
-        border: 2px solid var(--border-color);
-        border-radius: 7px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 20px;
-        margin: 0 80px;
-        width: 100%;
-        max-width: 600px;
-        align-self: center;
-    
-    }
-}
-
-.company-name {
-    grid-column: 2/4;
-    text-align: center;
-    font-family: "Lato", sans-serif;
-    font-size: 3.5rem;
-    margin-bottom: 10px;
-    padding-top: 10px;
-    color: var(--accent-color2);
 }
 
 
@@ -122,15 +49,6 @@ footer p {
     font-size: 20px;
     color: var(--accent-color2);
 }
-
-#form-main {
-    font-size: 16px;
-    font-family: "Lato", sans-serif;
-    width: 100%;
-    max-width: 540px;
-    justify-self: center;
-}
-
 
 header h1 {
     font-size: 2rem;
@@ -237,6 +155,7 @@ header h1 {
 .form-footer {
     background-color: var(--primary-color1);
     margin-top: .5rem;
+    border: 2px solid var(--border-color);
     border-radius: 7px;
 }
 
